# identity-validation-mx

./: .env.example  .gitignore  CONTACT.md  Dockerfile  LICENSE  Makefile  PROJECT_STATUS.md  README.md  README_SHORT.md  SECURITY.md  docker-compose.yml  go.mod  pyproject.toml  requirements.txt
.github/: README.md
.github/workflows/: ci.yml
api/proto/: identity.proto
cmd/server/: main.go
deployments/: Dockerfile  docker-compose.yml
deployments/docker/: Dockerfile  docker-compose.yml
deployments/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml  service.yaml
internal/api/: routes.go
internal/config/: config.go
internal/middleware/: auth.go  cors.go  logging.go  ratelimit.go  recovery.go
internal/models/: audit.go  biometric.go  bulk_import.go  identity.go  signature.go  webhook.go
internal/repository/: database.go  job_repository.go  migrations.go  repository.go
internal/services/: biometric_service.go  biometric_service_test.go  bulk_import_service.go  bulk_import_service_test.go  certificate_handler.go  csv_processor.go  curp_validator.go  curp_validator_test.go  errors.go  excel_processor.go  facial_comparison.go  hash_util.go  identity_service.go  identity_service_test.go  image_processor.go  ine_validator.go  job_queue.go  job_store.go  liveness_detection.go  (+11 more)
k8s/: deployment.yaml
migrations/: 202401010001_initial_schema.down.sql  202401010001_initial_schema.up.sql
scripts/: deploy.sh  setup.sh
tests/: __init__.py  e2e_test.go  integration_test.go  test_api.py
(+23 files in other folders)
